package grpc_contracts

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	// Import generated protobuf clients (will be generated in T019-T027)
	// ingestionpb "aegisshield/shared/proto/data-ingestion"
)

// T011: Data Ingestion Service gRPC Contract Tests
// Constitutional Principle: Comprehensive Testing - Write failing tests first

func TestDataIngestionService_UploadFile_ShouldFailInitially(t *testing.T) {
	// This test MUST fail initially - we haven't implemented the service yet
	// Following TDD: Red -> Green -> Refactor
	
	t.Skip("INTENTIONALLY FAILING: Data Ingestion Service not implemented yet (T011)")
	
	// Arrange
	conn, err := grpc.Dial("data-ingestion:9001", grpc.WithInsecure())
	require.NoError(t, err, "Should connect to data ingestion service")
	defer conn.Close()
	
	// client := ingestionpb.NewDataIngestionServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()
	
	// Act & Assert
	t.Run("should accept CSV file upload", func(t *testing.T) {
		// Test data from specs/003-build-a-data/spec.md - FR-001
		testCSV := []byte(`id,name,email,phone
1,John Doe,john@example.com,+1234567890
2,Jane Smith,jane@example.com,+1987654321`)
		
		request := &ingestionpb.FileUploadRequest{
			FileName:    "test_customers.csv",
			FileContent: testCSV,
			DataType:    ingestionpb.DataType_CUSTOMER_DATA,
			Metadata: map[string]string{
				"source":      "test_system",
				"uploaded_by": "test_user",
				"timestamp":   time.Now().Format(time.RFC3339),
			},
		}
		
		// response, err := client.UploadFile(ctx, request)
		// assert.NoError(t, err, "Should successfully upload CSV file")
		// assert.NotEmpty(t, response.JobId, "Should return job ID for tracking")
		// assert.Equal(t, ingestionpb.JobStatus_ACCEPTED, response.Status, "Should accept file for processing")
	})
	
	t.Run("should reject invalid file format", func(t *testing.T) {
		// Test validation - should reject non-CSV/JSON files
		invalidFile := []byte(`this is not a valid CSV or JSON file`)
		
		request := &ingestionpb.FileUploadRequest{
			FileName:    "invalid.txt",
			FileContent: invalidFile,
			DataType:    ingestionpb.DataType_CUSTOMER_DATA,
		}
		
		// _, err := client.UploadFile(ctx, request)
		// assert.Error(t, err, "Should reject invalid file format")
		// assert.Equal(t, codes.InvalidArgument, status.Code(err), "Should return InvalidArgument status")
	})
	
	t.Run("should handle large file streaming", func(t *testing.T) {
		// Test large file handling (>10MB) - FR-002 from spec
		// This should use streaming upload for large files
		
		// stream, err := client.UploadFileStream(ctx)
		// require.NoError(t, err, "Should create upload stream")
		
		// Test streaming large file in chunks
		// for chunk := range generateLargeFileChunks(15 * 1024 * 1024) { // 15MB file
		//     err := stream.Send(&ingestionpb.FileChunkRequest{
		//         FileName: "large_dataset.csv",
		//         Chunk:    chunk,
		//         IsLast:   false,
		//     })
		//     assert.NoError(t, err, "Should stream file chunks successfully")
		// }
		
		// response, err := stream.CloseAndRecv()
		// assert.NoError(t, err, "Should complete large file upload")
		// assert.NotEmpty(t, response.JobId, "Should return job ID for large file")
	})
}

func TestDataIngestionService_GetJobStatus_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Data Ingestion Service not implemented yet (T011)")
	
	// Test job status tracking - FR-003 from spec
	conn, err := grpc.Dial("data-ingestion:9001", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()
	
	// client := ingestionpb.NewDataIngestionServiceClient(conn)
	ctx := context.Background()
	
	t.Run("should return job status for valid job ID", func(t *testing.T) {
		request := &ingestionpb.JobStatusRequest{
			JobId: "test-job-123",
		}
		
		// response, err := client.GetJobStatus(ctx, request)
		// assert.NoError(t, err, "Should return job status")
		// assert.Equal(t, "test-job-123", response.JobId, "Should return correct job ID")
		// assert.Contains(t, []ingestionpb.JobStatus{
		//     ingestionpb.JobStatus_ACCEPTED,
		//     ingestionpb.JobStatus_PROCESSING,
		//     ingestionpb.JobStatus_COMPLETED,
		//     ingestionpb.JobStatus_FAILED,
		// }, response.Status, "Should return valid job status")
	})
	
	t.Run("should return not found for invalid job ID", func(t *testing.T) {
		request := &ingestionpb.JobStatusRequest{
			JobId: "invalid-job-id",
		}
		
		// _, err := client.GetJobStatus(ctx, request)
		// assert.Error(t, err, "Should return error for invalid job ID")
		// assert.Equal(t, codes.NotFound, status.Code(err), "Should return NotFound status")
	})
}

func TestDataIngestionService_StreamProcessing_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Data Ingestion Service not implemented yet (T011)")
	
	// Test real-time streaming - FR-004 from spec
	conn, err := grpc.Dial("data-ingestion:9001", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()
	
	// client := ingestionpb.NewDataIngestionServiceClient(conn)
	ctx := context.Background()
	
	t.Run("should process real-time transaction stream", func(t *testing.T) {
		// stream, err := client.ProcessTransactionStream(ctx)
		// require.NoError(t, err, "Should establish transaction stream")
		
		// Send sample transaction data
		testTransactions := []*ingestionpb.TransactionRecord{
			{
				Id:       "txn-001",
				Amount:   1500.00,
				Currency: "USD",
				From:     "account-123",
				To:       "account-456",
				Timestamp: time.Now().Unix(),
			},
			{
				Id:       "txn-002", 
				Amount:   75000.00, // Large amount - should trigger alert
				Currency: "USD",
				From:     "account-789",
				To:       "account-012",
				Timestamp: time.Now().Unix(),
			},
		}
		
		// for _, txn := range testTransactions {
		//     err := stream.Send(txn)
		//     assert.NoError(t, err, "Should send transaction successfully")
		// }
		
		// response, err := stream.CloseAndRecv()
		// assert.NoError(t, err, "Should complete transaction stream")
		// assert.Equal(t, len(testTransactions), int(response.ProcessedCount), "Should process all transactions")
		// assert.GreaterOrEqual(t, response.AlertsGenerated, int32(1), "Should generate alert for large transaction")
	})
}

// Helper function to generate large file chunks for testing
func generateLargeFileChunks(totalSize int) <-chan []byte {
	chunks := make(chan []byte)
	go func() {
		defer close(chunks)
		chunkSize := 1024 * 1024 // 1MB chunks
		for i := 0; i < totalSize; i += chunkSize {
			remaining := totalSize - i
			if remaining < chunkSize {
				chunkSize = remaining
			}
			
			// Generate test data chunk
			chunk := make([]byte, chunkSize)
			for j := range chunk {
				chunk[j] = byte('A' + (j % 26)) // Fill with test data
			}
			chunks <- chunk
		}
	}()
	return chunks
}